Fixed home page on mobile

--- a/source/stylesheets/_beeconnect.sass
+++ b/source/stylesheets/_beeconnect.sass
@@ -127,6 +127,9 @@ blockquote
     h1
       @extend %h1-font-size
       +margin(null null 17px)
+      font:
+        family: $montserrat
+        weight: bold
 
       +media($tablet)
         font:
